# rosie

./: .gitignore  Cargo.toml
apps/timer/: main.lua  manifest.toml
rosie/: Cargo.toml
rosie/src/: apps.rs  args.rs  asr.rs  error.rs  main.rs  wav.rs
whisper/: Cargo.toml
whisper/src/: context.rs  lib.rs  model.rs
