[package]
name = "rosie"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
rlua = "0.19.4"
serde = { version = "1.0.163", features = ["derive"] }
snafu = "0.7.4"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "fs", "time"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
toml = "0.7.4"
wav = "1.0.0"
whisper = { path = "../whisper" }
